--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,13 +31,19 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core: ^2.3.0
+
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   cloud_firestore: ^4.1.0
+  firebase_core: ^2.3.0
+  firebase_auth: ^4.2.0
+  image_picker: ^0.8.6
+  firebase_storage: ^11.0.7
+  firebase_messaging: ^14.1.4
+
 
 dev_dependencies:
   flutter_test:
